Fixed image sizing above fold, fixed spacing issues in projects, highlighted tech used in project description

--- a/src/styles/Landing.scss
+++ b/src/styles/Landing.scss
@@ -4,21 +4,18 @@ $secondary: #f9f5ff;
 $compliment: #cc2936;
 
 .landing {
-  height: 100svh;
-  height: 100vh;
   background-color: #111111;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   color: #aaa1a1;
-
   overflow-x: hidden;
   text-align: center;
 
   h1 span {
     display: inline-block;
     font-size: 4rem;
+    margin-top: 6rem;
   }
 
   #tsparticles {
@@ -32,10 +29,12 @@ $compliment: #cc2936;
     border-radius: 20px;
     color: $secondary;
     padding: 1.5rem;
-    margin-top: 2rem;
+    margin-top: 3.5rem;
+    margin-bottom: 5rem;
     font-size: 2rem;
     z-index: 1;
     text-decoration: none;
+
     &:hover {
       cursor: pointer;
 
@@ -52,30 +51,30 @@ $compliment: #cc2936;
       width: fit-content;
       transform: translateY(3px);
     }
+
+    @media screen and (min-width: "500px") {
+      margin-top: 6rem;
+    }
   }
 
-  @media screen and (min-width: "992px") {
+  @media screen and (min-width: "500px") {
     font-size: 4.5rem;
   }
 
   &__languages {
     z-index: 1;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 1rem;
     width: 90%;
+    max-width: 1000px;
 
     > div {
       display: flex;
       flex-direction: row;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 1rem;
-
-      @media screen and (min-width: 800px) {
-        flex-wrap: nowrap;
-      }
     }
   }
 
@@ -83,11 +82,10 @@ $compliment: #cc2936;
     padding: 0.2rem;
     border-radius: 100%;
     margin-top: 1.5rem;
-    // background: linear-gradient(to right, rgba(30, 30, 30, 0.5), $compliment);
     width: 20%;
 
     .skill__content {
-      // background-color: #111111;
+      margin-top: 1.5rem;
       border-radius: 100%;
       display: flex;
       flex-direction: column;
@@ -100,8 +98,16 @@ $compliment: #cc2936;
         margin-bottom: 2rem;
         width: 100%;
         max-width: 100px;
-        min-height: 50px;
+        height: auto;
       }
+
+      @media screen and (min-width: "573px") {
+        margin-top: 5rem;
+      }
+    }
+
+    @media screen and (min-width: "573px") {
+      width: 14%;
     }
   }
 }
